# california-housing-mlops

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
configs/: config.yaml
data/samples/: sample_input.csv
notebooks/: eda.ipynb
src/california_housing/: __init__.py  main.py
src/california_housing/components/: data_ingestion.py  data_preparation.py  data_transformer.py  model_evaluator.py  model_predictor.py  model_registry.py  model_trainer.py
src/california_housing/core/: config.py  config_definitions.py  data_definitions.py  exceptions.py  version.py
src/california_housing/models/: catalog.py
src/california_housing/pipeline/: prediction_pipeline.py  training_pipeline.py
src/california_housing/utils/: binning.py  model_naming.py
