[project]
name = "california-housing-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Seah", email = "kyle.seah@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandera>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
]

[project.scripts]
california-housing-mlops = "california_housing_mlops:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/california_housing"]
